# lin-alg

./: .gitignore  Cargo.toml  README.md
src/: complex_nums.rs  f32.rs  f64.rs  lib.rs  matrix.rs  quaternion.rs  simd.rs  simd_primitives.rs  tests.rs  util.rs  vec.rs
src/.cargo/: config.toml
