[package]
name = "lin_alg"
version = "1.1.3"
edition = "2024"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "Vector, matrix, and quaternion operations for general purposes"
keywords = ["algebra", "vector", "matrix", "quaternion", "simd"]
categories = [
    "algorithms",
    "mathematics",
    "algorithms",
    "no-std",
    "rendering",
]
repository = "https://github.com/David-OConnor/lin-alg"
documentation = "https://docs.rs/lin_alg"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]


[dependencies]
num-traits = { version = "^0.2.19", default-features = false }
bincode = { version = "^2.0.0-rc.3", optional = true }
cudarc = { version = "^0.13.3", optional=true }

[features]
default = ["std"]

std = ["num-traits/std"]
no_std = ["num-traits/libm"]
encode = ["bincode"]

# https://github.com/coreylowman/cudarc/blob/main/Cargo.toml
cuda = []  # Used internally for feature gates
cuda-12050 = ["cuda", "cudarc/cuda-12050"]
cuda-12060 = ["cuda", "cudarc/cuda-12060"]
cuda-12080 = ["cuda", "cudarc/cuda-12080"]

# The `computer_graphics` feature enables projection matrices,
# and other operations used in computer graphics.
computer_graphics = []

# For 512-bit SIMD.
nightly = []
