[package]
name = "lin_alg"
version = "1.3.2"
edition = "2024"
authors = ["David O'Connor <the_alchemist@fastmail.com>"]
description = "Vector, matrix, and quaternion operations for general purposes"
keywords = ["algebra", "vector", "matrix", "quaternion", "simd"]
categories = [
    "algorithms",
    "mathematics",
    "algorithms",
    "no-std",
    "rendering",
]
repository = "https://github.com/David-OConnor/lin-alg"
documentation = "https://docs.rs/lin_alg"
readme = "README.md"
license = "MIT"
exclude = [".gitignore"]


[package.metadata.docs.rs]
features = ["std", "computer_graphics"]


[dependencies]
num-traits = { version = "0.2.19", default-features = false }
bincode = { version = "2.0.1", optional = true }
paste = "1.0.15"  # Token pasting, to make macros easier

# Notes: Setting an older cudarc version allows for better compatibility; newer ones than the one
# specified here will work. Dynamic linking is not working.
cudarc = { version = "0.17.2", features = ["cuda-13000"], optional = true }
#cudarc = { version = "0.17.1", features = [
#    "std", "cublas", "cublaslt", "curand", "driver", "runtime", "nvrtc", "dynamic-linking", "cuda-12060"
#], default-features = false, optional=true }

[features]
default = ["std"]

std = ["num-traits/std"]
no_std = ["num-traits/libm"]
encode = ["bincode"]
cuda = ["cudarc"]

# The `computer_graphics` feature enables projection matrices,
# and other operations used in computer graphics.
computer_graphics = []